assets/styles/style.css
/* Body formatting */
body {
    margin: 0;
    padding: 0;
    background: ghostwhite;
    background-image: url("https://images.unsplash.com/photo-1559825481-12a05cc00344?auto=format&fit=crop&q=80&w=765&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
    background-attachment: fixed;
    background-size: cover;
    background-repeat: no-repeat;
    display: flex;
    justify-content: center;
    min-height: 100vh;
}
/* Page Fonts */
.cephNav, h1, h2, h3, h4 {
    font-family: 'Josefin Sans';
}
p, li {
    font-family: 'Lexend';
}
/* Nav Styling */

.cephNav ul{
    list-style-type: none;
    display: flex;
    justify-content: center;
}
.cephNav > ul > li {
    padding: 0 2em;
    font-size: 1.2em;
}
.cephNav > ul > li > a, .cephNav > ul > li > a:visited {
    color: mediumturquoise;
    text-decoration: none;
}
.cephNav > ul > li > a:hover, .cephNav > ul > li > a:visited:hover {
    color: lightcoral;
}
/* Page formatting and styling */
#page-container {
    max-width: 80vw;
    background: rgb(224, 255, 255, 0.75);
    margin: 2em 0;
    border-radius: 1%;
}
#cephHead {
    text-align: center;
    color: mediumseagreen;
}
#cephHead > div > img {
    width: 25%;
    border-radius: 45%;
}
.mainImgs {
    display: flex;
    justify-content: space-evenly;
}
.mainImgs > div {
    max-width: 50%;
    width: 20vw;
    height: 20vw;
    border-radius: 50%;
}
.mainImgOne, .mainImgTwo {
    max-width: 100%;
    width: 20vw;
    height: 20vw;
    border-radius: 50%;
    outline: 1px solid black;
}

#cephTime {
    margin: 0 1em;
}
#cephTime > h2{
    text-align: center;
    color: mediumseagreen;
}
#cephTime > div > p {
    color: darkviolet;
}

#cephGallery {
    text-align: center;
}
#cephGallery > h3 > a, #cephGallery > h3 > a:visited {
    color: darkcyan;
}
#cephGallery > h3 > a:hover, #cephGallery > h3 > a:visited:hover {
    color: lightcoral;
}

#cephLists {
    display: flex;
    justify-content: space-evenly;
    margin: 0 1em;
}
.cephLikes > h3, .cephDislikes > h3 {
    color: mediumvioletred;
}
.cephLikes, .cephDislikes {
    padding: 1em;
    border: 0.5em dotted slateblue;
}
.cephLikes > ul > li, .cephDislikes > ul > li {
    color: darkviolet;
}
/* Animations */
/* Image animations */
.mainImgOne:hover {
    animation: squidspin 1s forwards;
}
@keyframes squidspin {
    0% {rotate: 0deg;}
    100% {rotate: 360deg;}
}

.mainImgTwo:hover {
    animation: squidcray 3s forwards;
}
@keyframes squidcray {
    0% {outline: 1px solid black;}
    10% {outline: 3em solid gray;}
    20% {outline: 3em dashed red;}
    30% {outline: 3em dotted orange;}
    40% {outline: 3em inset yellow;}
    50% {outline: 3em outset green;}
    60% {outline: 3em ridge blue;}
    70% {outline: 3em double indigo;}
    80% {outline: 3em dotted violet;}
    90% {outline: 3em dashed gray;}
    100% {border: 1px solid darkgray;}
}

/* List animations */
.cephLikes {
    display: flex;
    padding: 0 1em;
    width: 110px;
    height: 110px;
    overflow: hidden;
    transition: width 2s ease, height 2s ease;
}
.cephLikes:hover {
    width: 60vw;
    height: auto;
}
.cephDislikes {
    height: 40px;
    width: 20em;
    overflow: hidden;
    transition: height 2s ease, width 2s ease;
}
.cephDislikes:hover {
    height: 78px;
    width: 60vw;
}

footer {
    background-color: lightskyblue;
    padding: 1px;
    margin-bottom: 2%;
    border-bottom-left-radius: 4%;
    border-bottom-right-radius: 4%;
}
footer > h4 {
    text-align: center;
    
}
footer > div > p {
    margin: 1em;
}

